--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ary</title>
-    <link rel="shortcut icon" href="/imgs/ico.png" type="image/x-icon">
+    <link rel="shortcut icon" href="imgs/ico.png" type="image/x-icon">
     <style>
         *{
             box-sizing: border-box;
@@ -51,14 +51,14 @@
 </head>
 <body>
     <div class="social" id="social">
-        <a href="https://stackoverflow.com/users/20944367/arypog"><img src="/imgs/stack-overflow.png"></a>
-        <a href="https://www.linkedin.com/in/ary-costa-a31a42234/"><img src="/imgs/linkedin.png" ></a>
-        <a href="https://github.com/aryPog"><img src="/imgs/github.png" ></a>
-        <a href="https://www.instagram.com/ary.fofo/"><img src="/imgs/instagram.png"></a>
+        <a href="https://stackoverflow.com/users/20944367/arypog"><img src="imgs/stack-overflow.png"></a>
+        <a href="https://www.linkedin.com/in/ary-costa-a31a42234/"><img src="imgs/linkedin.png" ></a>
+        <a href="https://github.com/aryPog"><img src="imgs/github.png" ></a>
+        <a href="https://www.instagram.com/ary.fofo/"><img src="imgs/instagram.png"></a>
     </div><br>
 
         <div class="nome sobre">
-            <img src="/imgs/nome.png">
+            <img src="imgs/nome.png">
             <p>Ary G. Costa;
 Estudante de TI comprometido em ajudar o próximo com 1 ano e 7 meses de experiência na área. Já trabalhei como jovem aprendiz em uma empresa de arquitetura fazendo planilhas no EXEL e Hoje em dia uso o conhecimento que adquiri como ajuda nos meu estudos. Atualmente estudo no Colégio Cotemig e tenho essas qualificações:
 
@@ -72,6 +72,7 @@ inglês - "fluente"</p>
             <div class="data"></div>
         </div>
     <script>
+    
         fetch("work.json")
         .then(function(response){
         return response.json();
