--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
         <div class="nome sobre">
             <img src="imgs/nome.png">
             <p>Ary G. Costa;
-Estudante de TI comprometido em ajudar o próximo com 1 ano e 7 meses de experiência na área. Já trabalhei como jovem aprendiz em uma empresa de arquitetura fazendo planilhas no EXEL e Hoje em dia uso o conhecimento que adquiri como ajuda nos meu estudos. Atualmente estudo no Colégio Cotemig e tenho essas qualificações:
+Estudante de TI comprometido em ajudar o próximo com 1 ano e 7 meses de experiência na área. Já trabalhou como jovem aprendiz em uma empresa de arquitetura 
+fazendo planilhas no EXEL e Hoje em dia usa o conhecimento que adquiriu como ajuda nos estudos. Atualmente estuda no Colégio Cotemig e tem essas 
+qualificações:
 
 C# - básico;
 HTML, CSS - básico;
